--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cookie": "^0.4.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1"
   },
   "devDependencies": {},
